Minor correction to the icon

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="annual-tile">
       <div class="annual-tile-left">
         <div class="img-container">
-          <img src="/images/icon-music.svg" alt="music-icon">
+          <img src="images/icon-music.svg" alt="music-icon">
         </div>
         <div class="text-content">
           <h5>Annual Plan</h5>
